[project]
name = "dotfiles"
version = "1.0.0"
description = "K. Heraud personal dotfiles"
authors = ["kheraud <1894658+kheraud@users.noreply.github.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible~=13.4.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=26.3.0",
]
